DatabaseLogEventObserver and logevents.html includes applicationName
